Fix the layout issue

--- a/app/assets/stylesheets/sectors.css.scss
+++ b/app/assets/stylesheets/sectors.css.scss
@@ -477,8 +477,8 @@ li.active a {
 .banner .banner-body {
   min-height: inherit !important;
 }
-.desc.banner_title p {
-    border-left: 5px solid #fff;
-    line-height: 24px;
-    padding: 10px 0 10px 20px;
-}
+// .desc.banner_title p {
+//     border-left: 5px solid #fff;
+//     line-height: 24px;
+//     padding: 10px 0 10px 20px;
+// }
